release-notes/10.0/index.mdx
---
uid: news-superoffice-10.0
title: What's new in SuperOffice 10.0
sidebarTitle: "Release overview"
description: Overview of new features and improvements released in SuperOffice 10.0, from version 10.0.1 through 10.0.7.
author: SuperOffice AS - Product and Engineering
date: 03.14.2022
version: 10.0
content_type: release-note
language: en
---

# What's new in SuperOffice 10.0

## Summary of highlights

**SuperOffice 10** - a new version of SuperOffice CRM - is now ready to offer you brand new & improved features that are designed to help you turn relationships into revenue.

Adding flexibility are keywords for this first release of SuperOffice 10: To start, this version brings a new price and packaging model that increases the flexibility where customers can choose the products that fit their business best. The new model includes new product names, several editions of our solutions, and introduces new add-on products.

Furthermore, SuperOffice 10 launches the advanced dashboards feature that expands your ability to customize the dashboard reports, including letting you create different reports for different user groups. In addition, the new Screen designer feature allows you to configure your main standard screens as well as design the layout of your More tabs. Additional highlights include the introduction of SuperOffice AI which embeds the power of AI into SuperOffice and will help you make better sense of data, automate work processes to save time, and reduce manual work.

With the new product packaging, new features, technological and feature improvements, and introducing new add-ons, SuperOffice 10 is a solution available today and created for tomorrow's CRM needs.

After your upgrade to SuperOffice 10, there are some changes to note:

* The sorting and placing of your user-defined fields will change and automatically presents themselves into two columns in the More tab of your solution.

* If you want to revert to the layout used to be, we suggest that you document today's layout. The easiest way is to take a picture of the More tab.

* If you are not happy with the auto-generated layout, you need the new Screen designer to adjust it, available as a feature in Development Tools.

## Details of the new features

* 10.0.1: Configurable screens, Dashboards, Forms
* 10.0.2: Dashboards, Screen designer, Forms, Scripts
* 10.0.3: Dashboards, Screen designer, Chat
* 10.0.4: Dashboards, Mailing, Chat
* 10.0.5: Mailing, Chat, Mobile CRM, APIs
* 10.0.6: **Five new UI languages in all modules**, Screen designer, Dashboards, Chat
* 10.0.7: Selection charts, Request administration, Triggers for Approvals

You can read more about these in the [product news][1].

[1]: https://community.superoffice.com/en/product-releases/whats-new/product/superoffice-10/
