release-notes/10.1/index.mdx
---
uid: release-notes-10.1
title: What's new in SuperOffice 10.1
description: Release notes. What's new in SuperOffice 10.1
author: SuperOffice AS - Product and Engineering
date: 04.04.2022
version: 10.1
content_type: release-note
---

# What's new in SuperOffice 10.1

## Summary of highlights

**SuperOffice 10** - a new version of SuperOffice CRM - is now ready to offer you brand new & improved features that are designed to help you turn relationships into revenue.

Adding flexibility are keywords for this first release of SuperOffice 10: To start, this version brings a new price and packaging model that increases the flexibility where customers can choose the products that fit their business best. The new model includes new product names, several editions of our solutions, and introduces new add-on products.

Furthermore, SuperOffice 10 launches the advanced dashboards feature that expands your ability to customize the dashboard reports, including letting you create different reports for different user groups. In addition, the new Screen designer feature allows you to configure your main standard screens as well as design the layout of your More tabs. Additional highlights include the introduction of SuperOffice AI which embeds the power of AI into SuperOffice and will help you make better sense of data, automate work processes to save time, and reduce manual work.

With the new product packaging, new features, technological and feature improvements, and introducing new add-ons, SuperOffice 10 is a solution available today and created for tomorrow's CRM needs.

After your upgrade to SuperOffice 10, there are some changes to note:

* The sorting and placing of your user-defined fields will change and automatically presents themselves into two columns in the More tab of your solution.

* If you want to revert to the layout used to be, we suggest that you document today's layout. The easiest way is to take a picture of the More tab.

* If you are not happy with the auto-generated layout, you need the new Screen designer to adjust it, available as a feature in Development Tools.

## Breaking changes

### Onsite username/password and Windows authentication

In the previous SuperOffice versions, when you supplied credentials to the SuperOffice login dialog, NetServer tried to authenticate the user against SuperOffice database and when it failed, it tried also against AD. This system allowed for a mix of both SuperOffice logins and AD logins without any additional setup.

The possibility to have mixed logins was removed in SuperOffice **10.1.5**.
But reimplemented in version **10.1.6** (05.10.2022), due to a lot of unexpected problems.
You can [read more on the forums][1].

## Details of the new features

* 10.1.1 Screen designer, APIs
* 10.1.2: Mobile CRM, Apps
* 10.1.3: Form, Chat
* 10.1.4: SharePoint document library, Dashboard/Find/Selection of Mailing/Form/Chat, CRMScript
* 10.1.5: Quote approval notifications, Dashboard, Quick Search
* 10.1.6: Sales targets, Configurable archives (Screen designer), Mailing - Document template languages
* 10.1.9: CRMScript, Dashboard

[1]: https://community.superoffice.com/en/technical/forums/general-forums/announcements/onsite-usernamepassword-and-windows-authentication/
